# Computational_Methods_Homework_2

./: CMakeLists.txt  README.md
src/: main.cpp  tools.cpp  tools.h
